# gb-turing-simulator

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.c
.github/workflows/: cmake-single-platform.yml
lib/: dyn_array.c  gb_headers.h  turing_init.c  turing_logic.c  turing_machine.h
tests/: CMakeLists.txt  test.c
